Adicionando Editor com load e save dos arquivos dos levels
- Load e Save apenas para os levels personalizados teclas 1, 2 e 0 (levels inicial ainda não está em formato de arquivo)
- algumas melhorias e mudança nas teclas

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     />
     <title>COIN SEEKER</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="editor/css/editor.css" />
   </head>
   <body>
     <h2>COIN <strong>SEEKER</strong></h2>
     <div id="game-content"></div>
+    <script src="editor/js/jquery.min.js"></script>
     <script src="js/game.js"></script>
+    <script src="editor/js/editor.js"></script>
     <div class="instructions">
       <p>ARROWS <strong>KEYS</strong> or <strong>WASD</strong></p>
       <span>Made by <strong>J. Lucas</strong> </span>
