Iniciando com arquivos da pasta levels/game

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       type="image/x-icon"
     />
     <title>COIN SEEKER</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="editor/css/editor.css" />
+    <link rel="stylesheet" href="css/style.css?v=1" />
+    <link rel="stylesheet" href="editor/css/editor.css?v=1" />
   </head>
   <body>
     <h2>COIN <strong>SEEKER</strong></h2>
