--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h2>COIN <strong>SEEKER</strong></h2>
     <div id="game-content"></div>
     <script src="editor/js/jquery.min.js"></script>
+    <script src="joypad.js-2.1.3/dist/joypad.js"></script>
+    <script src="js/joypad.js"></script>
     <script src="js/game.js"></script>
     <script src="editor/js/editor.js"></script>
     <div class="instructions">
