--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
       type="image/x-icon"
     />
     <title>COIN SEEKER</title>
-    <link rel="stylesheet" href="css/style.css?v=1" />
-    <link rel="stylesheet" href="editor/css/editor.css?v=1" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="editor/css/editor.css" />
   </head>
   <body>
     <h2>COIN <strong>SEEKER</strong></h2>
     <div id="game-content"></div>
     <script src="editor/js/jquery.min.js"></script>
-    <script src="joypad.js-2.1.3/dist/joypad.js"></script>
-    <script src="js/joypad.js"></script>
     <script src="js/game.js"></script>
     <script src="editor/js/editor.js"></script>
     <div class="instructions">
